# aiagent

./: .env.example  .gitattributes  .gitignore  README.md  cloud.tencent.example.env  pyproject.toml  requirements.txt  test.py
aiagent/: __init__.py
aiagent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
aiagent/brain/: __init__.py  agent_core.py  context_builder.py  dialogue_manager.py  response_planner.py  safety_guard.py  tool_router.py
aiagent/cognition/: planner_normalizer.py  planner_prompt.py  planner_reply.py  state_analyzer.py  state_normalizer.py  state_prompt.py
aiagent/common/: logger.py
aiagent/diagnostics/: models.py  runtime_diagnostics.py
aiagent/expression/: __init__.py  audio_playback_dispatcher.py  live2d_dispatcher.py  live2d_payload_dispatcher.py  mock_live2d_dispatcher.py  motion_policy.py  output_broadcaster.py  (+3 more)
cloud/: circuit_breaker.py  degrade.py  gpu_client.py  task_queue.py
config/: defaults.py  paths.py  providers.py  settings.py
deploy/: docker-compose.tencent.yml
docs/: api-observability.md  architecture.md  config-reference.md  event-flow.md  implementation-plan.md  migration-plan.md  persona-design.md  phase4-stabilization-closure.md  project-file-inventory.md  project-overview-next-stage.md
scripts/: build_knowledge_index.py  import_character.py  migrate_aiyzl_memory.py  run_core.ps1  run_persona_state_chat_test.py  run_persona_state_planner_chat_test.py  run_state_graph_real.py  run_web.ps1  test_multimodal_chat.ps1  test_persona_with_llm.py  test_vision_daily.ps1
tts/: tts_chain.py  tts_tools.py
(+179 files in other folders)
