[project]
name = "aiagent"
version = "0.1.0"
description = "Unified AI VTuber runtime"
requires-python = ">=3.11"
dependencies = [
    "langchain-openai>=0.2.14",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["aiagent*", "apps*", "config*", "domain*", "integrations*"]
exclude = ["data*", "tests*", "docs*", "scripts*"]
